# tilltoy

./: .gitignore  Cargo.toml  rustc-ice-2025-07-27T20_30_57-8896.txt
gfx/: headerfooter.afphoto  numbers.afphoto
src/: led.rs  main.rs  printer.rs  sk6812.rs  state.rs
