[package]
edition = "2021"
name = "till"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
bitflags = {version="*", default-features = false}
num_enum = {version="*", default-features = false}

embassy-embedded-hal = { version = "*", path = "../embassy/embassy-embedded-hal", features = ["defmt"] }
embassy-sync = { version = "*", path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "*", path = "../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "nightly"] }
embassy-time = { version = "*", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "*", path = "../embassy/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-futures = { version = "*", path = "../embassy/embassy-futures" }

static_cell = "*"

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"

# for assign resources example
assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "d54ac35742e029caa6c2ca2302b48be7d076bcfd" }

escpos-embedded = { git = "https://github.com/stestagg/escpos-embedded.git", features=['embedded_io', 'image'] }
escpos-embed-image = { git = "https://github.com/stestagg/escpos-embed-image.git" }
embedded-io = { version = "*"}

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.2"
panic-probe = { version = "0.3", features = ["print-defmt"] }
byte-slice-cast = { version = "1.2.0", default-features = false }
heapless = "0.8"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "*"
pio-proc = { git = "https://github.com/rp-rs/pio-rs", rev = "adf5ea9095baddbbe1129b368616bc81e3d4a425" }
pio = { git = "https://github.com/rp-rs/pio-rs", rev = "adf5ea9095baddbbe1129b368616bc81e3d4a425" }
rand = { version = "0.8.5", default-features = false }
embedded-sdmmc = { version = "*" }
rp-pac = { version = "*", features = ["rp2040"] }

[profile.release]
lto = true
opt-level = "z"
debug = 2

[profile.dev]
lto = true
opt-level = "z"
